--- a/imdex.html
+++ b/imdex.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html>
-        <head>
-            <link rel="stylesheet" href="main.css">
-        </head>
-        <body>
-            <h1>My first application!</h1>
-            <p>Welcome to <i>Learning JavaScript, 3rd Edition</i>.</p>
 
-            <script src="jquery-2.x-git.js"></script>
+<head>
+    <link rel="stylesheet" href="main.css">
+</head>
 
-            <script src="main.js"></script>
-        </body>
+<body>
+    <h1>My first application!</h1>
+    <p>Welcome to <i>Learning JavaScript, 3rd Edition</i>.</p>
+
+    <canvas id="mainCanvas"></canvas>
+
+    <!-- <script src="jquery-2.x-git.js"></script> -->
+
+    <script src="https://code.jquery.com/jquery-2.x-git.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/paper.js/0.12.0/paper-full.js"></script>
+
+    <script src="main.js"></script>
+</body>
+
 </html>
